по правил reviews, по работал над адаптивностью

--- a/index.html
+++ b/index.html
@@ -385,15 +385,15 @@
             </div><!-- /whatwedo -->          
         </div><!-- /container -->
     </section>
-    <div class="section section--gray">
-        <div class="container">
-            <div class="mention">
-                <img src="./assets/img/mention/1.png" alt="" class="mention_icon">
-                <div class="mention__content">
-                    <p class="mention__text">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
-                    <p class="mention__autor">Jon Doe</p>
-                </div>
-            </div>
+    <div class="reviews">
+        <div class="reviews__item">
+            <button class="reviews__arrow reviews__arrow--back"></button>
+            <button class="reviews__arrow reviews__arrow--forward"></button>
+            <img src="./assets/img/mention/1.png" alt="" class="reviews__icon">
+            <div class="reviews__content">
+                <p class="reviews__text">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
+                <p class="reviews__autor">Jon Doe</p>
+            </div>            
         </div>
     </div>
     <section class="section">
@@ -412,7 +412,7 @@
             <div class="teamcards">
                 <div class="teamcards__item">
                     <div class="teamcards__photo">
-                        <img src="./assets/img/team/1.jpg" alt="" class="teamcards_img">
+                        <img src="./assets/img/team/1.jpg" alt="" class="teamcards__img">
                         <div class="teamsocial">
                             <a href="" class="teamsocial__item">
                                 <svg class="teamsocial__icon">
@@ -441,7 +441,7 @@
                 </div>
                 <div class="teamcards__item">
                     <div class="teamcards__photo">
-                        <img src="./assets/img/team/2.jpg" alt="" class="teamcards_img">
+                        <img src="./assets/img/team/2.jpg" alt="" class="teamcards__img">
                         <div class="teamsocial">
                             <a href="" class="teamsocial__item">
                                 <svg class="teamsocial__icon">
@@ -470,7 +470,7 @@
                 </div>
                 <div class="teamcards__item">
                     <div class="teamcards__photo">
-                        <img src="./assets/img/team/3.jpg" alt="" class="teamcards_img">
+                        <img src="./assets/img/team/3.jpg" alt="" class="teamcards__img">
                         <div class="teamsocial">
                             <a href="" class="teamsocial__item">
                                 <svg class="teamsocial__icon">
@@ -593,15 +593,15 @@
             </div>
         </div><!-- /works -->
     </section>
-    <div class="section section--review">
-        <div class="container">
-            <div class="mention">
-                <img src="./assets/img/review/photo_1.png" alt="" class="mention_icon">
-                <div class="mention__content">
-                    <p class="mention__text">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
-                    <p class="mention__autor">Joshua Earle</p>
-                </div>
-            </div>
+    <div class="reviews">
+        <div class="reviews__item">
+            <button class="reviews__arrow reviews__arrow--back"></button>
+            <button class="reviews__arrow reviews__arrow--forward"></button>
+            <img src="./assets/img/review/photo_1.png" alt="" class="reviews__icon">
+            <div class="reviews__content">
+                <p class="reviews__text">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
+                <p class="reviews__autor">Joshua Earle</p>
+            </div>            
         </div>
     </div>
     <section class="section section--clients">      
